# trusted_noise_qkd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  generate_params.py  job_submission.sub  main.py  make_plots.py  params.txt  pyproject.toml  wrapper.sh
src/trusted_noise_qkd/: main.py
src/trusted_noise_qkd/config/: config.py  generate_params.py
src/trusted_noise_qkd/cvx_optimization/: _solve.py  find_initial_state.py  sdp_descent.py
src/trusted_noise_qkd/frank_wolfe/: FWOptions.py  frank_wolfe.py  step_one_FW.py  step_two_FW.py
src/trusted_noise_qkd/key_rate/: rate_raw_asym.py  rate_raw_fs.py
src/trusted_noise_qkd/objective_and_gradients/: objective_and_gradient.py  objective_only.py
src/trusted_noise_qkd/utils/: G_dagger_eps.py  _blkdiag.py  _herm.py  beta_from_alpha.py  build_Grho_eps.py  build_Zsigma.py  h2.py  optimize_q.py  spectral_kernel.py  zpinch.py
